# cvat

./: .bandit  .bumpversion  .codacy.yml  .coveragerc  .dockerignore  .editorconfig  .env  .env.sso.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .header.js  .nginx.conf  .nycrc  .pre-commit-config.yaml  .prettierrc  .prettierrc.json  .pylintrc  .remarkignore  .remarkrc  .remarkrc.js  .role.json  .stylelintrc.json  .travis.yml  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.md.orig  CHANGELOG_DIGITALSENSE.md  CHANGE_LOG.md  CITATION.cff  CLAUDE.md  CLI_SDK_ persistent authentication.md  CLI_SDK_persistent_authentication_implementation_plan.md  CNAME  CONTRIBUTING.md  (+125 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  cvat_server.sh  cvat_server_init.sh  devcontainer-lock.json  devcontainer.json  dist.env  docker-compose.devcontainer.yml  docker-compose.nuclio.yml  docker-compose.rendered.yml  docker-compose.yml  entrypoint.sh  init.sh  post-create.sh  postcreate.sh  poststart.sh
.fleet/: settings.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  pull_request_template.md
.regal/: config.yaml
about/: index.html
ai-models/: README.md
analytics/: .env  README.md  docker-compose.yml
backend/: urls.py  wsgi.py
backend_entrypoint.d/: cvat.conf  cvat_workers.conf
certs/: cert.pem  key.pem
changelog.d/: 10818.added.md  10819.added.md  20231006_152644_fix_6878.md  20231006_155231_persist_image_filters.md  20231009_092646_invite_users.md  20231009_103807_maria_add_aws_s3_prefix_support.md  20231009_104112_maria_add_aws_s3_prefix_support.md  20231009_140340_roman_HEAD.md  20231009_165414_roman_snyk_fix_7429062f3bf9ab5eb080c5cceabd5d6a.md  20231010_113810_sizow.k.d_fix_tracks_splitting.md  20231011_153117_sizow.k.d_fix_coco_tracks_uploading.md  20231011_153251_andrey_fix_siammask.md  20231011_162748_nikita_fix_perf_issues.md  20231012_095633_klakhov_fix_memory.md  20231012_105902_sekachev.bs_fixed_crash.md  20231012_113210_andrey_update_nginx_config.md  20231012_123219_andrey_x_frame_options.md  20231012_131418_sekachev.bs_fixed_google_translator.md  20231012_145036_maria_fix_getting_cs_content_when_s3_contains_empty_dirs.md  20231012_181301_andrey_fix_worker_restart.md  20231013_095118_boris_optimize_masks.md  20231013_104143_jonashiltl2003_secret_key_length.md  20231013_110048_klakhov_remove_need_help.md  20231013_135447_boris_disable_fetch_all_orgs.md  20231013_152455_maria_remove_get_cs_content_v1_endpoint.md  20231016_131815_andrey_helm_update_clickouse_config.md  20231016_144002_maria_gcs_skip_manually_created_dirs.md  20231017_194639_roman_auto_annotate_no_load.md  20231018_103441_maria_add_test_for_retrieving_bucket_content_with_manually_created_dirs.md  20231018_224126_andrey_bulk_save_server_files.md  20231019_114611_mzhiltsov_fix_label_updates.md  20231023_132746_maria_limit_one_user_to_one_task_at_a_time.md  20231023_154559_klakhov_tracker_mil_optimizations.md  20231024_105610_boris_fix_detectron.md  20231024_123046_boris_keypoints.md  20231024_190737_roman_docker_compose_external_db.md  20231025_101044_boris_keypoints.md  20231026_141231_sekachev.bs_additional_org_receive_check.md  20231027_151714_p.kotiuk_filter_by_name.md  20231030_124607_maria_test_for_default_prefix.md  (+886 more)
components/: README.md
cvat-api-client/: .remarkignore  README.md  developer_guide.md  setup.py
cvat-api-usage/: cvat_api_export.py  cvat_api_upload.py
cvat-canvas/: .codacy.yml  .eslintrc.cjs  .eslintrc.js  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  postcss.config.js  tsconfig.json  tslint.config.js  webpack.config.cjs  webpack.config.js
cvat-canvas3d/: .eslintignore  (+11 more)
cvat-cli/: README.md  developer_guide.md  pyproject.toml  setup.py
cvat-cli/requirements/: base.txt  development.txt  testing.txt
cvat-cli/src/cvat_cli/: __main__.py  cli.py  parser.py  version.py
cvat-cli/src/cvat_cli/_internal/: agent.py  agent_driver.py  agent_driver_detection.py  agent_driver_interaction.py  agent_driver_tracking.py  command_base.py  commands.py  commands_all.py  commands_config.py  commands_functions.py  commands_profile.py  commands_projects.py  commands_tasks.py  common.py  parsers.py  utils.py
cvat-cli/src/cvat_cli/core/: __init__.py  core.py  definition.py  utils.py
cvat-cli/tests/: __init__.py  test_cli.py
cvat_libs/: pyproject.toml
cvat_libs/cvat_libs/rq_ext/: SKILL.md  consts.py  mixins.py  worker.py
(+42009 files in other folders)
