# Copyright (C) CVAT.ai Corporation
#
# SPDX-License-Identifier: MIT

[project]
dynamic = ["version"]

name = "cvat-cli"
description = "Command-line client for CVAT"
readme = "README.md"
authors = [{name = "CVAT.ai Corporation", email = "support@cvat.ai"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "cvat-sdk==2.54.1",

    "attrs>=24.2.0",
    "Pillow>=10.3.0",
]

[project.scripts]
cvat-cli = "cvat_cli.__main__:main"

[project.urls]
homepage = "https://github.com/cvat-ai/cvat/"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "cvat_cli.version.VERSION"}

[tool.isort]
profile = "black"
forced_separate = ["tests"]
line_length = 100
skip_gitignore = true # align tool behavior with Black
